# tenex

./: .gitignore  404.html  AGENTS.md  CITATION.cff  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/scripts/: generate_index.py
.github/workflows/: build-wheels.yml  ci.yml  docs.yml  publish-index.yml
agents/: index.html
api/: index.html
benchmarks/: README.md  datasets.py  run_benchmark.py
compute/: index.html
data/: README.md
data/mesc/: branch_i4.npy  expression_raw_node_name.npy  pseudotime_f4.npy
docs/: api.md  compute.md  index.md  inference.md  installation.md  kernels.md  pipeline.md  quickstart.md
docs/stylesheets/: extra.css
inference/: index.html
installation/: index.html
kernels/: index.html
pipeline/: index.html
quickstart/: index.html
search/: search_index.json
tenex/: __init__.py  _log.py  binarize.py  io.py  netweaver.py  pipeline.py  preprocess.py  result.py  tenex.py  transferentropy.py  utils.py
tenex/_ext/: __init__.py
tenex/csrc/: adaptive_smem.cu  adaptive_smem_surrogate_test.cu  binarize_cuda.cu  full_smem.cu  full_smem_surrogate_test.cu  gmem.cu  trace_gmem.cu  trace_hash_entropy.cu  trace_remap.cu  trace_smem.cu  trace_sort_entropy.cu
tenex/inference/: __init__.py  clr.py  fdr.py  grn.py  nd.py  netweaver.py  point.py  surrogate_test.py  trace.py
tenex/kernels/: __init__.py  adaptive_smem.py  adaptive_smem_surrogate_test.py  binarize_kernel.py  full_smem.py  full_smem_surrogate_test.py  gemm_b2.py  gmem.py  scatter_add.py
tests/: conftest.py  test_cpu_fallback.py  test_device_contract.py  test_point_4way.py
tutorials/: tutorial_basic.py
whl/: index.html
whl/cpu/tnx/: index.html
whl/cu126/tnx/: index.html
whl/cu128/tnx/: index.html
whl/whl/: index.html
whl/whl/cu126/: index.html
whl/whl/cu132/tnx/: index.html
