[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tnx"
# version is supplied by setup.py from TENEX_VERSION (default "0.1.0"); the PyPI
# release stays "0.1.0" and the self-hosted wheel index sets a local tag.
dynamic = ["version"]
description = "High-performance Transfer Entropy computation for GRN inference"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Daewon Lee", email = "dwlee@cau.ac.kr"}]
keywords = [
    "TENET",
    "FastTENET",
    "transfer entropy",
    "gene regulatory network",
    "GRN inference",
    "single-cell RNA-seq",
    "scRNA-seq",
    "GPU",
    "CUDA",
]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
# torch is a runtime prerequisite but is intentionally NOT a hard dependency so
# users install the CUDA-matched build themselves (see INSTALL.md). numpy, scipy,
# statsmodels (Benjamini-Hochberg FDR), and tqdm are pure-Python and safe to pin.
dependencies = [
    "numpy",
    "scipy",
    "statsmodels",
    "tqdm",
]

# torch is installed separately with the desired CUDA build, for example:
#   pip install torch --index-url https://download.pytorch.org/whl/cu132
[project.optional-dependencies]
cuda = ["torch>=2.0", "triton>=2.0"]
cpu = ["torch>=2.0"]
cupy = ["cupy-cuda13x>=13.0"]
kmeans = ["scikit-learn"]
dev = ["pytest", "torch>=2.0", "triton>=2.0", "scikit-learn"]

[project.urls]
Homepage = "https://github.com/cxinsys/tenex"
Repository = "https://github.com/cxinsys/tenex"
Issues = "https://github.com/cxinsys/tenex/issues"

[tool.setuptools.packages.find]
include = ["tenex*"]

[tool.setuptools.package-data]
tenex = ["csrc/*.cu", "assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: requires CUDA GPU",
]
